zad4/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> anything_list
Rule 2     program -> <empty>
Rule 3     anything_list -> anything_list anything
Rule 4     anything_list -> anything
Rule 5     anything -> declaration
Rule 6     anything -> fundef
Rule 7     anything -> instruction
Rule 8     declaration -> TYPE inits ;
Rule 9     declaration -> error ;
Rule 10    inits -> inits , init
Rule 11    inits -> init
Rule 12    init -> ID = expression
Rule 13    instruction -> print_instr
Rule 14    instruction -> labeled_instr
Rule 15    instruction -> assignment
Rule 16    instruction -> choice_instr
Rule 17    instruction -> while_instr
Rule 18    instruction -> repeat_instr
Rule 19    instruction -> return_instr
Rule 20    instruction -> break_instr
Rule 21    instruction -> continue_instr
Rule 22    instruction -> compound_instr
Rule 23    instruction -> expression ;
Rule 24    print_instr -> PRINT expression ;
Rule 25    print_instr -> PRINT error ;
Rule 26    labeled_instr -> ID : instruction
Rule 27    assignment -> ID = expression ;
Rule 28    choice_instr -> IF ( condition ) instruction
Rule 29    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 30    choice_instr -> IF ( error ) instruction
Rule 31    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 32    while_instr -> WHILE ( condition ) instruction
Rule 33    while_instr -> WHILE ( error ) instruction
Rule 34    repeat_instr -> REPEAT anything_list UNTIL condition ;
Rule 35    return_instr -> RETURN expression ;
Rule 36    continue_instr -> CONTINUE ;
Rule 37    break_instr -> BREAK ;
Rule 38    compound_instr -> { anything_list }
Rule 39    condition -> expression
Rule 40    const -> INTEGER
Rule 41    const -> FLOAT
Rule 42    const -> STRING
Rule 43    expression -> ID
Rule 44    expression -> const
Rule 45    expression -> expression + expression
Rule 46    expression -> expression - expression
Rule 47    expression -> expression * expression
Rule 48    expression -> expression / expression
Rule 49    expression -> expression % expression
Rule 50    expression -> expression | expression
Rule 51    expression -> expression & expression
Rule 52    expression -> expression ^ expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> expression OR expression
Rule 55    expression -> expression SHL expression
Rule 56    expression -> expression SHR expression
Rule 57    expression -> expression EQ expression
Rule 58    expression -> expression NEQ expression
Rule 59    expression -> expression > expression
Rule 60    expression -> expression < expression
Rule 61    expression -> expression LE expression
Rule 62    expression -> expression GE expression
Rule 63    expression -> ( expression )
Rule 64    expression -> ( error )
Rule 65    expression -> ID ( expr_list_or_empty )
Rule 66    expression -> ID ( error )
Rule 67    expr_list_or_empty -> expr_list
Rule 68    expr_list_or_empty -> <empty>
Rule 69    expr_list -> expr_list , expression
Rule 70    expr_list -> expression
Rule 71    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 72    args_list_or_empty -> args_list
Rule 73    args_list_or_empty -> <empty>
Rule 74    args_list -> args_list , arg
Rule 75    args_list -> arg
Rule 76    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 49
&                    : 51
(                    : 28 29 30 31 32 33 63 64 65 66 71
)                    : 28 29 30 31 32 33 63 64 65 66 71
*                    : 47
+                    : 45
,                    : 10 69 74
-                    : 46
/                    : 48
:                    : 26
;                    : 8 9 23 24 25 27 34 35 36 37
<                    : 60
=                    : 12 27
>                    : 59
AND                  : 53
BREAK                : 37
CONTINUE             : 36
ELSE                 : 29 31
EQ                   : 57
FLOAT                : 41
GE                   : 62
ID                   : 12 26 27 43 65 66 71 76
IF                   : 28 29 30 31
INTEGER              : 40
LE                   : 61
NEQ                  : 58
OR                   : 54
PRINT                : 24 25
REPEAT               : 34
RETURN               : 35
SHL                  : 55
SHR                  : 56
STRING               : 42
TYPE                 : 8 71 76
UNTIL                : 34
WHILE                : 32 33
^                    : 52
error                : 9 25 30 31 33 64 66
{                    : 38
|                    : 50
}                    : 38

Nonterminals, with rules where they appear

anything             : 3 4
anything_list        : 1 3 34 38
arg                  : 74 75
args_list            : 72 74
args_list_or_empty   : 71
assignment           : 15
break_instr          : 20
choice_instr         : 16
compound_instr       : 22 71
condition            : 28 29 32 34
const                : 44
continue_instr       : 21
declaration          : 5
expr_list            : 67 69
expr_list_or_empty   : 65
expression           : 12 23 24 27 35 39 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 69 70
fundef               : 6
init                 : 10 11
inits                : 8 10
instruction          : 7 26 28 29 29 30 31 31 32 33
labeled_instr        : 14
print_instr          : 13
program              : 0
repeat_instr         : 18
return_instr         : 19
while_instr          : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . anything_list
    (2) program -> .
    (3) anything_list -> . anything_list anything
    (4) anything_list -> . anything
    (5) anything -> . declaration
    (6) anything -> . fundef
    (7) anything -> . instruction
    (8) declaration -> . TYPE inits ;
    (9) declaration -> . error ;
    (71) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (13) instruction -> . print_instr
    (14) instruction -> . labeled_instr
    (15) instruction -> . assignment
    (16) instruction -> . choice_instr
    (17) instruction -> . while_instr
    (18) instruction -> . repeat_instr
    (19) instruction -> . return_instr
    (20) instruction -> . break_instr
    (21) instruction -> . continue_instr
    (22) instruction -> . compound_instr
    (23) instruction -> . expression ;
    (24) print_instr -> . PRINT expression ;
    (25) print_instr -> . PRINT error ;
    (26) labeled_instr -> . ID : instruction
    (27) assignment -> . ID = expression ;
    (28) choice_instr -> . IF ( condition ) instruction
    (29) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (30) choice_instr -> . IF ( error ) instruction
    (31) choice_instr -> . IF ( error ) instruction ELSE instruction
    (32) while_instr -> . WHILE ( condition ) instruction
    (33) while_instr -> . WHILE ( error ) instruction
    (34) repeat_instr -> . REPEAT anything_list UNTIL condition ;
    (35) return_instr -> . RETURN expression ;
    (37) break_instr -> . BREAK ;
    (36) continue_instr -> . CONTINUE ;
    (38) compound_instr -> . { anything_list }
    (43) expression -> . ID
    (44) expression -> . const
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    $end            reduce using rule 2 (program -> .)
    TYPE            shift and go to state 33
    error           shift and go to state 31
    PRINT           shift and go to state 4
    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 5
    REPEAT          shift and go to state 15
    RETURN          shift and go to state 2
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 29
    {               shift and go to state 32
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    choice_instr                   shift and go to state 3
    repeat_instr                   shift and go to state 6
    return_instr                   shift and go to state 7
    const                          shift and go to state 8
    continue_instr                 shift and go to state 10
    while_instr                    shift and go to state 11
    program                        shift and go to state 12
    assignment                     shift and go to state 17
    labeled_instr                  shift and go to state 18
    compound_instr                 shift and go to state 19
    declaration                    shift and go to state 20
    anything                       shift and go to state 23
    break_instr                    shift and go to state 24
    instruction                    shift and go to state 25
    fundef                         shift and go to state 26
    anything_list                  shift and go to state 27
    print_instr                    shift and go to state 28
    expression                     shift and go to state 30

state 1

    (41) const -> FLOAT .

    +               reduce using rule 41 (const -> FLOAT .)
    -               reduce using rule 41 (const -> FLOAT .)
    *               reduce using rule 41 (const -> FLOAT .)
    /               reduce using rule 41 (const -> FLOAT .)
    %               reduce using rule 41 (const -> FLOAT .)
    |               reduce using rule 41 (const -> FLOAT .)
    &               reduce using rule 41 (const -> FLOAT .)
    ^               reduce using rule 41 (const -> FLOAT .)
    AND             reduce using rule 41 (const -> FLOAT .)
    OR              reduce using rule 41 (const -> FLOAT .)
    SHL             reduce using rule 41 (const -> FLOAT .)
    SHR             reduce using rule 41 (const -> FLOAT .)
    EQ              reduce using rule 41 (const -> FLOAT .)
    NEQ             reduce using rule 41 (const -> FLOAT .)
    >               reduce using rule 41 (const -> FLOAT .)
    <               reduce using rule 41 (const -> FLOAT .)
    LE              reduce using rule 41 (const -> FLOAT .)
    GE              reduce using rule 41 (const -> FLOAT .)
    )               reduce using rule 41 (const -> FLOAT .)
    ;               reduce using rule 41 (const -> FLOAT .)
    ,               reduce using rule 41 (const -> FLOAT .)


state 2

    (35) return_instr -> RETURN . expression ;
    (43) expression -> . ID
    (44) expression -> . const
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    const                          shift and go to state 8
    expression                     shift and go to state 35

state 3

    (16) instruction -> choice_instr .

    TYPE            reduce using rule 16 (instruction -> choice_instr .)
    error           reduce using rule 16 (instruction -> choice_instr .)
    PRINT           reduce using rule 16 (instruction -> choice_instr .)
    ID              reduce using rule 16 (instruction -> choice_instr .)
    IF              reduce using rule 16 (instruction -> choice_instr .)
    WHILE           reduce using rule 16 (instruction -> choice_instr .)
    REPEAT          reduce using rule 16 (instruction -> choice_instr .)
    RETURN          reduce using rule 16 (instruction -> choice_instr .)
    BREAK           reduce using rule 16 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 16 (instruction -> choice_instr .)
    {               reduce using rule 16 (instruction -> choice_instr .)
    (               reduce using rule 16 (instruction -> choice_instr .)
    INTEGER         reduce using rule 16 (instruction -> choice_instr .)
    FLOAT           reduce using rule 16 (instruction -> choice_instr .)
    STRING          reduce using rule 16 (instruction -> choice_instr .)
    $end            reduce using rule 16 (instruction -> choice_instr .)
    UNTIL           reduce using rule 16 (instruction -> choice_instr .)
    }               reduce using rule 16 (instruction -> choice_instr .)
    ELSE            reduce using rule 16 (instruction -> choice_instr .)


state 4

    (24) print_instr -> PRINT . expression ;
    (25) print_instr -> PRINT . error ;
    (43) expression -> . ID
    (44) expression -> . const
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    error           shift and go to state 36
    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    const                          shift and go to state 8
    expression                     shift and go to state 37

state 5

    (32) while_instr -> WHILE . ( condition ) instruction
    (33) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 38


state 6

    (18) instruction -> repeat_instr .

    TYPE            reduce using rule 18 (instruction -> repeat_instr .)
    error           reduce using rule 18 (instruction -> repeat_instr .)
    PRINT           reduce using rule 18 (instruction -> repeat_instr .)
    ID              reduce using rule 18 (instruction -> repeat_instr .)
    IF              reduce using rule 18 (instruction -> repeat_instr .)
    WHILE           reduce using rule 18 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 18 (instruction -> repeat_instr .)
    RETURN          reduce using rule 18 (instruction -> repeat_instr .)
    BREAK           reduce using rule 18 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 18 (instruction -> repeat_instr .)
    {               reduce using rule 18 (instruction -> repeat_instr .)
    (               reduce using rule 18 (instruction -> repeat_instr .)
    INTEGER         reduce using rule 18 (instruction -> repeat_instr .)
    FLOAT           reduce using rule 18 (instruction -> repeat_instr .)
    STRING          reduce using rule 18 (instruction -> repeat_instr .)
    $end            reduce using rule 18 (instruction -> repeat_instr .)
    UNTIL           reduce using rule 18 (instruction -> repeat_instr .)
    }               reduce using rule 18 (instruction -> repeat_instr .)
    ELSE            reduce using rule 18 (instruction -> repeat_instr .)


state 7

    (19) instruction -> return_instr .

    TYPE            reduce using rule 19 (instruction -> return_instr .)
    error           reduce using rule 19 (instruction -> return_instr .)
    PRINT           reduce using rule 19 (instruction -> return_instr .)
    ID              reduce using rule 19 (instruction -> return_instr .)
    IF              reduce using rule 19 (instruction -> return_instr .)
    WHILE           reduce using rule 19 (instruction -> return_instr .)
    REPEAT          reduce using rule 19 (instruction -> return_instr .)
    RETURN          reduce using rule 19 (instruction -> return_instr .)
    BREAK           reduce using rule 19 (instruction -> return_instr .)
    CONTINUE        reduce using rule 19 (instruction -> return_instr .)
    {               reduce using rule 19 (instruction -> return_instr .)
    (               reduce using rule 19 (instruction -> return_instr .)
    INTEGER         reduce using rule 19 (instruction -> return_instr .)
    FLOAT           reduce using rule 19 (instruction -> return_instr .)
    STRING          reduce using rule 19 (instruction -> return_instr .)
    $end            reduce using rule 19 (instruction -> return_instr .)
    UNTIL           reduce using rule 19 (instruction -> return_instr .)
    }               reduce using rule 19 (instruction -> return_instr .)
    ELSE            reduce using rule 19 (instruction -> return_instr .)


state 8

    (44) expression -> const .

    +               reduce using rule 44 (expression -> const .)
    -               reduce using rule 44 (expression -> const .)
    *               reduce using rule 44 (expression -> const .)
    /               reduce using rule 44 (expression -> const .)
    %               reduce using rule 44 (expression -> const .)
    |               reduce using rule 44 (expression -> const .)
    &               reduce using rule 44 (expression -> const .)
    ^               reduce using rule 44 (expression -> const .)
    AND             reduce using rule 44 (expression -> const .)
    OR              reduce using rule 44 (expression -> const .)
    SHL             reduce using rule 44 (expression -> const .)
    SHR             reduce using rule 44 (expression -> const .)
    EQ              reduce using rule 44 (expression -> const .)
    NEQ             reduce using rule 44 (expression -> const .)
    >               reduce using rule 44 (expression -> const .)
    <               reduce using rule 44 (expression -> const .)
    LE              reduce using rule 44 (expression -> const .)
    GE              reduce using rule 44 (expression -> const .)
    ;               reduce using rule 44 (expression -> const .)
    )               reduce using rule 44 (expression -> const .)
    ,               reduce using rule 44 (expression -> const .)


state 9

    (63) expression -> ( . expression )
    (64) expression -> ( . error )
    (43) expression -> . ID
    (44) expression -> . const
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    error           shift and go to state 39
    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    const                          shift and go to state 8
    expression                     shift and go to state 40

state 10

    (21) instruction -> continue_instr .

    TYPE            reduce using rule 21 (instruction -> continue_instr .)
    error           reduce using rule 21 (instruction -> continue_instr .)
    PRINT           reduce using rule 21 (instruction -> continue_instr .)
    ID              reduce using rule 21 (instruction -> continue_instr .)
    IF              reduce using rule 21 (instruction -> continue_instr .)
    WHILE           reduce using rule 21 (instruction -> continue_instr .)
    REPEAT          reduce using rule 21 (instruction -> continue_instr .)
    RETURN          reduce using rule 21 (instruction -> continue_instr .)
    BREAK           reduce using rule 21 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 21 (instruction -> continue_instr .)
    {               reduce using rule 21 (instruction -> continue_instr .)
    (               reduce using rule 21 (instruction -> continue_instr .)
    INTEGER         reduce using rule 21 (instruction -> continue_instr .)
    FLOAT           reduce using rule 21 (instruction -> continue_instr .)
    STRING          reduce using rule 21 (instruction -> continue_instr .)
    $end            reduce using rule 21 (instruction -> continue_instr .)
    UNTIL           reduce using rule 21 (instruction -> continue_instr .)
    }               reduce using rule 21 (instruction -> continue_instr .)
    ELSE            reduce using rule 21 (instruction -> continue_instr .)


state 11

    (17) instruction -> while_instr .

    TYPE            reduce using rule 17 (instruction -> while_instr .)
    error           reduce using rule 17 (instruction -> while_instr .)
    PRINT           reduce using rule 17 (instruction -> while_instr .)
    ID              reduce using rule 17 (instruction -> while_instr .)
    IF              reduce using rule 17 (instruction -> while_instr .)
    WHILE           reduce using rule 17 (instruction -> while_instr .)
    REPEAT          reduce using rule 17 (instruction -> while_instr .)
    RETURN          reduce using rule 17 (instruction -> while_instr .)
    BREAK           reduce using rule 17 (instruction -> while_instr .)
    CONTINUE        reduce using rule 17 (instruction -> while_instr .)
    {               reduce using rule 17 (instruction -> while_instr .)
    (               reduce using rule 17 (instruction -> while_instr .)
    INTEGER         reduce using rule 17 (instruction -> while_instr .)
    FLOAT           reduce using rule 17 (instruction -> while_instr .)
    STRING          reduce using rule 17 (instruction -> while_instr .)
    $end            reduce using rule 17 (instruction -> while_instr .)
    UNTIL           reduce using rule 17 (instruction -> while_instr .)
    }               reduce using rule 17 (instruction -> while_instr .)
    ELSE            reduce using rule 17 (instruction -> while_instr .)


state 12

    (0) S' -> program .



state 13

    (40) const -> INTEGER .

    +               reduce using rule 40 (const -> INTEGER .)
    -               reduce using rule 40 (const -> INTEGER .)
    *               reduce using rule 40 (const -> INTEGER .)
    /               reduce using rule 40 (const -> INTEGER .)
    %               reduce using rule 40 (const -> INTEGER .)
    |               reduce using rule 40 (const -> INTEGER .)
    &               reduce using rule 40 (const -> INTEGER .)
    ^               reduce using rule 40 (const -> INTEGER .)
    AND             reduce using rule 40 (const -> INTEGER .)
    OR              reduce using rule 40 (const -> INTEGER .)
    SHL             reduce using rule 40 (const -> INTEGER .)
    SHR             reduce using rule 40 (const -> INTEGER .)
    EQ              reduce using rule 40 (const -> INTEGER .)
    NEQ             reduce using rule 40 (const -> INTEGER .)
    >               reduce using rule 40 (const -> INTEGER .)
    <               reduce using rule 40 (const -> INTEGER .)
    LE              reduce using rule 40 (const -> INTEGER .)
    GE              reduce using rule 40 (const -> INTEGER .)
    )               reduce using rule 40 (const -> INTEGER .)
    ;               reduce using rule 40 (const -> INTEGER .)
    ,               reduce using rule 40 (const -> INTEGER .)


state 14

    (37) break_instr -> BREAK . ;

    ;               shift and go to state 41


state 15

    (34) repeat_instr -> REPEAT . anything_list UNTIL condition ;
    (3) anything_list -> . anything_list anything
    (4) anything_list -> . anything
    (5) anything -> . declaration
    (6) anything -> . fundef
    (7) anything -> . instruction
    (8) declaration -> . TYPE inits ;
    (9) declaration -> . error ;
    (71) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (13) instruction -> . print_instr
    (14) instruction -> . labeled_instr
    (15) instruction -> . assignment
    (16) instruction -> . choice_instr
    (17) instruction -> . while_instr
    (18) instruction -> . repeat_instr
    (19) instruction -> . return_instr
    (20) instruction -> . break_instr
    (21) instruction -> . continue_instr
    (22) instruction -> . compound_instr
    (23) instruction -> . expression ;
    (24) print_instr -> . PRINT expression ;
    (25) print_instr -> . PRINT error ;
    (26) labeled_instr -> . ID : instruction
    (27) assignment -> . ID = expression ;
    (28) choice_instr -> . IF ( condition ) instruction
    (29) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (30) choice_instr -> . IF ( error ) instruction
    (31) choice_instr -> . IF ( error ) instruction ELSE instruction
    (32) while_instr -> . WHILE ( condition ) instruction
    (33) while_instr -> . WHILE ( error ) instruction
    (34) repeat_instr -> . REPEAT anything_list UNTIL condition ;
    (35) return_instr -> . RETURN expression ;
    (37) break_instr -> . BREAK ;
    (36) continue_instr -> . CONTINUE ;
    (38) compound_instr -> . { anything_list }
    (43) expression -> . ID
    (44) expression -> . const
    (45) expression -> . expression + expression
    (46) expression -> . expression - expression
    (47) expression -> . expression * expression
    (48) expression -> . expression / expression
    (49) expression -> . expression % expression
    (50) expression -> . expression | expression
    (51) expression -> . expression & expression
    (52) expression -> . expression ^ expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . expression SHL expression
    (56) expression -> . expression SHR expression
    (57) expression -> . expression EQ expression
    (58) expression -> . expression NEQ expression
    (59) expression -> . expression > expression
    (60) expression -> . expression < expression
    (61) expression -> . expression LE expression
    (62) expression -> . expression GE expression
    (63) expression -> . ( expression )
    (64) expression -> . ( error )
    (65) expression -> . ID ( expr_list_or_empty )
    (66) expression -> . ID ( error )
    (40) const -> . INTEGER
    (41) const -> . FLOAT
    (42) const -> . STRING

    TYPE            shift and go to state 33
